# usability-benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CITATION.cff  DESIGN.md  LICENSE  Makefile  README.md  constraints.txt  pyproject.toml
.github/: dependabot.yml
.github/scripts/: validate_tasks.py
.github/workflows/: ci.yml  schema-validate.yml
collect/: __init__.py  cache.py  cli.py  filters.py  github_client.py  normalize.py  pipeline.py
collect/sources/: __init__.py  awesome_lists.py  issues.py  readmes.py  topics.py
configs/: harvest.yaml
configs/agents/: scaffold_default.yaml
configs/daic/: cluster.yaml
configs/models/: claude_opus.yaml  gpt_frontier.yaml  qwen_vllm.yaml
configs/oracle/: oracle_default.yaml
configs/runs/: full_v1.yaml  qwen32b_smoke.yaml  qwen7b_smoke.yaml  qwen7b_tools.yaml  smoke.yaml
daic/: README.md
daic/secrets/: load_secrets.sh
daic/slurm/: collect_cpu.sbatch  run_api.sbatch  run_qwen7b_smoke.sbatch  run_vllm.sbatch  score.sbatch  vllm_serve.sbatch
daic/sync/: pull_results.sh
docs/: infra.md  metrics.md  protocol.md  related-work.md  scoring.md  tasks.md
drafting/: __init__.py  draft_tasks.py
leaderboard/: README.md
leaderboard/data/: smoke_baselines_v0.jsonl
qc/: __init__.py  calibrate.py  diversity.py  grader_sanity.py  validate.py
schemas/: raw_harvest.schema.json  task.schema.json  trace.schema.json
src/usabench/: __init__.py  cli.py  logging_setup.py
src/usabench/agent/: __init__.py  base.py  scaffold.py  tools.py
src/usabench/agent/adapters/: __init__.py  raw_scaffold.py
src/usabench/config/: __init__.py  hashing.py  loader.py
src/usabench/core/: __init__.py  enums.py  errors.py  ids.py  schema.py
src/usabench/eval/: __init__.py  _common.py  aggregate.py  composite.py  gold.py  integrity.py  metrics.py  normalize.py  severity_audit.py  verifier.py
src/usabench/eval/scoring/: __init__.py  ga.py  v1_functional.py  v2_rubric.py  v3_judge.py
src/usabench/eval/spec/: __init__.py  usability_score.yaml
src/usabench/harness/: __init__.py  batch.py  budget.py  interaction_bus.py  manifest.py  runner.py  sandbox.py
src/usabench/llm/: __init__.py  anthropic_client.py  cache.py  client.py  factory.py  fake.py  openai_client.py  retry.py  smoke_agent.py  usage.py
src/usabench/oracle/: __init__.py  classifier.py  oracle.py  policy.py
src/usabench/oracle/prompts/: grading_user.j2  system_user.j2
src/usabench/report/: __init__.py  leaderboard.py  trace_view.py
tasks/: README.md
tasks/curated/: v0_smoke.jsonl  v1.jsonl
tasks/ub-cal-0007/: task.json
tasks/ub-cal-0007/grader/: grade.py
tasks/ub-cal-0007/grader/gold/: cal_summary_gold.json
tasks/ub-cal-0007/grader/probes/: tz_probe.py
tasks/ub-smoke-csvstats/grader/: grade.py
tasks/ub-smoke-linecount/grader/: grade.py
tasks/ub-smoke-wordfreq/grader/: grade.py
tests/: __init__.py  conftest.py  test_foundation_contracts.py  test_harness_smoke.py  test_llm_clients.py
tests/golden/: README.md
tests/integration/: test_collect_offline.py  test_run_episode_fake.py  test_verifier_grades.py
tests/unit/: test_budget.py  test_config_hashing.py  test_interaction_bus.py  test_metrics.py  test_schema.py
